Organize files to make a gem

--- a/rakefile
+++ b/rakefile
@@ -1,9 +1,9 @@
 root = ::File.dirname(__FILE__)
-require ::File.join(root, 'postman')
+require ::File.join(root, 'lib', 'postman')
 
 namespace :db do
   task :setup do
-    require_relative 'postman/database'
+    require_relative 'lib/postman/database'
     models = DataMapper::Model.descendants
     Postman.configuration.databases.each_key do |database|
       models.each do |model|
