--- a/rakefile
+++ b/rakefile
@@ -3,7 +3,8 @@ require ::File.join(root, 'lib', 'postman')
 
 namespace :db do
   task :setup do
-    require_relative 'lib/postman/loader'
+    require_relative 'lib/postman/loaders/database'
+    Postman.loader
     models = DataMapper::Model.descendants
     Postman.configuration.databases.each_key do |database|
       models.each do |model|
