--- a/rakefile
+++ b/rakefile
@@ -1,10 +1,10 @@
-require File.join(File.dirname(__FILE__), 'lib', 'postman')
+require File.join(File.dirname(__FILE__), 'lib', 'monkey-mailer')
 
 namespace :db do
   task :setup do
-    require_relative 'lib/postman/loaders/database'
-    raise "Postman loader is not database" unless Postman.loader.is_a?(Postman::Database)
-    Postman.configuration.databases.each_key do |database|
+    require_relative 'lib/monkey-mailer/loaders/database'
+    raise "MonkeyMailer loader is not database" unless MonkeyMailer.loader.is_a?(MonkeyMailer::Database)
+    MonkeyMailer.configuration.databases.each_key do |database|
       DataMapper::Model.descendants.each do |model|
         model.auto_migrate!(database.to_sym)
       end
